# radix-mlp

./: .gitignore  Readme.md
.github/workflows/: build-and-publish.yml  build-maturin.yml  test-package.yml
benchmark/: README.md  record_power.py  requirements.txt  simple_msmarco_embed.py
benchmark/results/qwen3_0.6b/: power_data.csv  power_summary.txt
benchmark/results/qwen3_0.6b/data/: timing_data.csv
benchmark/results/qwen3_0.6b/latex/: results_summary.tex  results_table.tex
benchmark/results/qwen3_4b/: power_data.csv  power_summary.txt
benchmark/results/qwen3_4b/data/: timing_data.csv
benchmark/results/qwen3_4b/latex/: results_summary.tex  results_table.tex
benchmark/results/qwen3_8b/: power_summary.txt
benchmark/results/qwen3_8b/data/: timing_data.csv
benchmark/results/qwen3_8b/latex/: results_summary.tex  results_table.tex
benchmark/results/qwen3vllm/data/: timing_data.csv
benchmark/results/qwen3vllm_06B/data/: timing_data.csv
benchmark/results/qwen3vllm_06B_rev_train/data/: timing_data.csv
benchmark/results/qwen3vllm_06B_v2/data/: timing_data.csv
benchmark/results/qwen3vllm_4B/: power_data.csv  power_summary.txt
benchmark/results/qwen3vllm_4B/data/: timing_data.csv
benchmark/results/qwen3vllm_4b_rev_train/data/: timing_data.csv
benchmark/results/qwen3vllm_8B/data/: timing_data.csv
benchmark/results/qwen3vllm_8b_rev_train/data/: timing_data.csv
kernels/: README.md
package/: Cargo.toml  README.md
package/benches/: compute_fold_and_scatter.rs
package/python_bindings/: README.md
package/src/: lib.rs
python_bindings/: Cargo.toml  README.md  pyproject.toml
python_bindings/radix_mlp/: __init__.py  torch.py
python_bindings/src/: lib.rs
python_bindings/tests/: test_basic.py  test_torch.py
train/: README.md  Readme.md  next_steps.md  proof.py  proof_radix_forward_backward.py  proof_radix_identical_inference.py  pyproject.toml  qwen3_radix_torch_varlen.py  radix_torch_varlen.py  requirements.txt  simple_test.py  test_huggingface_comparison.py  vanilla_modeling_qwen3.py
