[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "radix-mlp"
version = "0.1.0"
description = "RadixMLP: Prefix-based computation sharing for transformer models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Feil", email = "michaelfeil1209@gmail.com"}
]
keywords = ["transformers", "optimization", "radix", "mlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "numpy>=1.24",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "radix_mlp._core"

[tool.ruff]
line-length = 100
target-version = "py310"