[project]
name = "radix-mlp-train"
version = "0.0.1"
description = "RadixMLP: Train"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Feil", email = "no-reply@michaelfeil.eu"}
]
keywords = ["transformers", "optimization", "radix", "mlp"]
repository = "https://github.com/michaelfeil/radix-mlp"
homepage = "https://github.com/michaelfeil/radix-mlp"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "torch>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"